app/main/default/objects/agf__ADM_Sprint__c/fields/agf__Committed_Items_Completed__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Committed_Items_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Committed Items Completed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>