app/main/default/objects/agf__ADM_Sprint__c/fields/agf__Committed_Points__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Committed_Points__c</fullName>
        <label>Committed Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>