app/main/default/objects/agf__ADM_Sprint__c/fields/agf__Completed_Items__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Completed_Items__c</fullName>
        <label>Completed Items</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>