app/main/default/objects/agf__ADM_Sprint__c/fields/agf__Completion_Story_Points__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Completion_Story_Points__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(agf__Completed_Story_Points__c),
        ISBLANK(agf__Committed_Points__c)
    ),
    0,
    agf__Completed_Story_Points__c/agf__Committed_Points__c
)</formula>
        <label>Completion Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>